fixed cutoff when window was smaller than content

--- a/css/minesweeper.css
+++ b/css/minesweeper.css
@@ -14,23 +14,13 @@ body {
     background-color: var(--bg-color);
 }
 
-#navbar {
-    position: absolute;
-    float: right;
-    background-color: red;
-    width: 100%;
-}
-
-#navbarWrapper {
-    float:right;
-}
-
 #content {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
+    align-items: center;
 }
 
 .fullScreenFlexContainer {
@@ -51,15 +41,17 @@ body {
 
 .centerFlexItem {
     align-self: center;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 
 #contentWrapper {
-    height: fit-content;
-    align-self: center;
     overflow: auto;
     border: 1px dashed black;
     border-radius: 5px;
     padding:20px;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 
 #canvasWrapper {
